
2007-08-10  Tinne De Laet <first dot last at mech dot kuleuven dot be>
	* tests/matrixwrapper_test.cpp: some extra tests added according to bug#441
	and existing test made more thoroughly

2007-05-25  Tinne De Laet <first dot last at mech dot kuleuven dot be>
	* Singular value decomposition and pseudoinverse added to the matrix wrapper
	(revision 28197)

2007-05-21  Tinne De Laet <first dot last at mech dot kuleuven dot be>
	* Smoother example included (and thoroughly tested ofcourse)

2007-05-11  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* Scythe support re-activated

2007-05-10  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* add extensive testing for matrix/vector wrapper

2007-05-10  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* add first support for boost matrix/vector library

2007-05-03  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* move experimental branch to new trunk location in orocos repository

2007-05-03  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* update documentation for new build system. see bfl/docs/installation_guide.tex

2007-05-03  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* Finished porting BFL to cmake build system

2007-05-03  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* Replace the tests in the src folder with the cppunit tests in
	the bfl/tests folder
	* Replace the tests in the src folder with the examples in the
	bfl/examples folder

2007-05-03  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* Add the examples of the getting started guide to the BFL trunk
	(Klaas should be happy now :-)

2007-05-03  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* Moved the matrixWrapper into the BFL build system. The namespace
	MatrixWrapper was kept however for backwards compatibility

2007-05-03  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* replace all checks and cerr messages by assert